------------------------------------------------------------------------------

                  What's new in each version of Interchange
                       (since the version 5.6 branch)

------------------------------------------------------------------------------

See UPGRADE document for a list of incompatible changes.


Interchange 5.6.1 under development.

Core
----

* Fixed regression in set_slice for the following usage pattern
  (#200):

  $Db{table}->set_slice('', %parms));

* Allow XML posts by e.g. Google Checkout, which broke in Interchange 5.6.0 
  (#219).

  Thanks to Andy <ic@tvcables.co.uk> for the patch.

* Quell bogus warnings from Encode::Alias (#224).

  Thanks to Andy <ic@tvcables.co.uk> and Rene Hertell
  <icdevgroup@hertell.com> for reporting. 

* Added Nunavut to the list of valid Canadian provinces (#231).
  
  Thanks to Mathew Jones for the report.

Payment
-------

* If the tmp/wget directory (or more properly "$Vend::Cfg->{ScratchDir}/wget")
  directory did not exist, use_wget mode would error out.

  Change code to make directory if non-existent, and give better error
  if by some strange chance a file existed there.

Standard
--------

* Disabled product comment to prevent spam showing up on default
  installations.

* Provide reasonable defaults for shipping mode and country at checkout to avoid
  "not enough information" errors.


------------------------------------------------------------------------------


Interchange 5.6.0 released on 2008-05-21.

Standard
--------

* Made userdb password field nullable for Postgres, to avoid new user creation
  problems.


Admin
-----

* fix ContentEditor.pm to make it possible again to create files via the Admin interface.

(end)